# interpreter_tutorial

./: .gitignore  Cargo.toml  README.md  evaluate_queue.sh  pascal.dict
fuzz_input/: basic  basic1  basic2  basic3  types1
src/: ast.rs  errors.rs  main.rs  symbol_table.rs  tokens.rs
src/ast/: assignment_stmt_node.rs  binary_operator_node.rs  block_node.rs  compound_stmt_node.rs  integer_node.rs  macros.rs  mod.rs  number_node.rs  operator_node.rs  program_node.rs  type_node.rs  unary_operator_node.rs  variable_decl_node.rs  variable_node.rs
src/interpreter/: mod.rs
src/lexer/: mock_lexer.rs  mod.rs  pascal_lexer.rs
src/parser/: mod.rs
