[package]
name = "interpreter_tutorial"
version = "0.1.0"
authors = ["Dominik Fankhauser <dominik@fankhausers.ch>"]

[dependencies]
leftpad = "0.2.0"
unicode-width = "0.1.4"
afl = { version = "0.1", optional = true }
afl-plugin = { version = "0.1", optional = true }

[features]
default = []
fuzzing = ["afl-plugin", "afl"]
benchmarks = []